--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="/logo.webp" />
   </head>
   <body class="relative">
-    <header>
+    <header class="z-10">
       <nav>
         <ul class="flex gap-12 px-20 py-8">
           <li>
