fix firefox halfpixel

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </nav>
     </header>
-    <canvas class="fixed -z-10 left-0 top-0"></canvas>
+    <canvas class="fixed -z-10 left-0 top-0 h-dvh"></canvas>
     <section class="h-dvh relative grid place-items-center">
       <h1 class="text-white text-8xl uppercase">
         GodSky <span class="text-lg">(g pa lé assets)</span>
